--- a/style.css
+++ b/style.css
@@ -10,3 +10,100 @@ td {
     text-align: center;
 }
 
+
+/*Задача 27*/
+.keyboard{
+    width: 704px;
+    margin: 0 auto;
+}
+.keyboard .row{
+    width: 100%;
+    height: 40px;
+    margin-bottom: 10px;
+    clear: both;
+}
+.keyboard .key{
+    width: 40px;
+    height: 40px;
+    float: left;
+    cursor: pointer;
+    color: #444444;
+    margin-left: 6px;
+    text-align: center;
+    line-height: 40px;
+    background: linear-gradient(to top, #fce25b, #ecc92b);
+    box-shadow:
+            -1px 0px rgb(220,195,35), -1px 1px rgb(192,167,7),
+            -2px 1px rgb(219,194,34), -2px 2px rgb(191,166,6),
+            -3px 2px rgb(218,193,33), -3px 3px rgb(190,165,5),
+            -4px 3px rgb(217,192,32), -4px 4px rgb(189,164,4),
+            -5px 4px rgb(216,191,31), -5px 5px rgb(188,163,3),
+            -6px 5px rgb(215,190,30), -6px 6px rgb(187,162,2);
+}
+.keyboard .key:hover{
+    background: #f9de53;
+}
+.keyboard .backspace,.keyboard .capslock{
+    width: 100px;
+}
+.keyboard .capslock{
+    color: #4e2f2f;
+}
+.keyboard .tab{
+    width: 80px;
+}
+.keyboard .space{
+    width: 300px;
+    margin-left: 206px;
+}
+.keyboard sup{
+    margin: -10px 0 0 -24px;
+    font-size: 12px;
+    position: absolute;
+}
+#result{
+    width: 680px;
+    height: 80px;
+    margin: 0 auto;
+    display: block;
+    padding: 10px;
+    font-size: 18px;
+    color: #444;
+    margin-bottom: 10px;
+}
+
+
+/*Задача 28*/
+.btn {
+    width: 60px;
+    height: 60px;
+    background: #fc0;
+    display: inline-block;
+    text-align: center;
+    line-height: 60px;
+    user-select: none;
+}
+
+.btn:hover {
+    background: #f70;
+    color: #fff;
+}
+
+#calc-wrap {
+    padding: 10px;
+    width: 100%;
+    text-align: center;
+    background: #eee;
+}
+
+#calc {
+    width: 240px;
+    display: inline-block;
+}
+
+#inputVal {
+    width: 100%;
+    border: 0;
+    font-size: 16px;
+    resize: vertical;
+}
